--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
     "build": "tsc",
-  "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/app.ts",
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,7 +23,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/validator": "^13.15.3",
+    "celebrate": "^15.0.3",
     "express": "^4.18.1",
+    "joi": "^18.0.1",
     "mongoose": "^6.5.0"
   }
 }
