--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/validator": "^13.15.3",
+    "@types/winston": "^2.4.4",
+    "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
     "express": "^4.18.1",
     "joi": "^18.0.1",
-    "mongoose": "^6.5.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.5.0",
+    "winston": "^3.17.0"
   }
 }
