--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.5.0",
+    "validator": "^13.15.15",
     "winston": "^3.17.0"
   }
 }
